# nanogpt

./: README.md  bigram.py  pyproject.toml  train.py
